@@ -21,10 +21,12 @@ import javax.persistence.Id;
 import javax.persistence.JoinColumn;
 import javax.persistence.ManyToOne;
 import javax.persistence.OneToMany;
+import javax.persistence.OneToOne;
 
 import org.springframework.util.StringUtils;
 
 import com.depromeet.breadmapbackend.domain.bakery.product.Product;
+import com.depromeet.breadmapbackend.domain.bakery.report.BakeryAddReport;
 import com.depromeet.breadmapbackend.domain.review.Review;
 import com.depromeet.breadmapbackend.domain.user.User;
 import com.depromeet.breadmapbackend.global.BaseEntity;
@@ -78,9 +80,9 @@ public class Bakery extends BaseEntity {
 	@Convert(converter = FacilityInfoListConverter.class)
 	private List<FacilityInfo> facilityInfoList = new ArrayList<>();
 
-	@ManyToOne(fetch = FetchType.EAGER)
-	@JoinColumn(name = "pioneer_id")
-	private User pioneer;
+	@OneToOne
+	@JoinColumn(name = "report_id")
+	private BakeryAddReport bakeryAddReport;
 
 	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(name = "owner_id")
@@ -91,7 +93,7 @@ public class Bakery extends BaseEntity {
 		Long id, String name, Double latitude, Double longitude,
 		String address, String detailedAddress, String hours, String phoneNumber,
 		String websiteURL, String instagramURL, String facebookURL, String blogURL, String image,
-		List<FacilityInfo> facilityInfoList, BakeryStatus status, User pioneer
+		List<FacilityInfo> facilityInfoList, BakeryStatus status, BakeryAddReport bakeryAddReport
 	) {
 		this.id = id;
 		this.name = name;
@@ -106,7 +108,7 @@ public class Bakery extends BaseEntity {
 		this.image = image;
 		this.facilityInfoList = facilityInfoList;
 		this.status = status;
-		this.pioneer = pioneer;
+		this.bakeryAddReport = bakeryAddReport;
 	}
 
 	public void update(
@@ -127,10 +129,6 @@ public class Bakery extends BaseEntity {
 		this.status = status;
 	}
 
-	public void updatePioneer(User pioneer) {
-		this.pioneer = pioneer;
-	}
-
 	public boolean isPosting() {
 		return this.status.equals(BakeryStatus.POSTING);
 	}
@@ -148,8 +146,17 @@ public class Bakery extends BaseEntity {
 	}
 
 	public Double bakeryRating(List<Review> reviewList) {
-		return Math.floor(reviewList.stream().map(Review::getAverageRating).collect(Collectors.toList())
+		return Math.floor(reviewList.stream().map(Review::getAverageRating).toList()
 			.stream().mapToDouble(Double::doubleValue).average().orElse(0) * 10) / 10.0;
+	}
+
+	public User getPioneer() {
+		return this.bakeryAddReport != null ? this.bakeryAddReport.getUser() : null;
+	}
+
+	public String getShortAddress() {
+		final String[] addressSplit = this.address.split("\\s");
+		return addressSplit.length == 1 ? addressSplit[0] : addressSplit[0] + " " + addressSplit[1];
 	}
 
 	public Product getProduct(Long productId) {
@@ -173,5 +180,4 @@ public class Bakery extends BaseEntity {
 	public int hashCode() {
 		return Objects.hash(id);
 	}
-
 }
